--- a/autoencoder.ipynb
+++ b/autoencoder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b9e978e6",
+   "id": "b57c5618",
    "metadata": {},
    "source": [
     "# What this code does\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ea79696",
+   "id": "335bf16e",
    "metadata": {},
    "source": [
     "## Import ...."
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "27366766",
+   "id": "a57f9b49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "06f89a38",
+   "id": "34f43fa8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "0d68d081",
+   "id": "b1ddd5e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "76cd3f96",
+   "id": "09310399",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "b2c5b835",
+   "id": "40c2456d",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "cc0718ab",
+   "id": "7336d58a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "05b6a7f1",
+   "id": "86c547cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,10 +423,13 @@
     "    model_clone.load_state_dict(copy.deepcopy(model.state_dict()))\n",
     "\n",
     "    x_train,y_pred,model_clone=iteration(model_clone,image,asymptotic_repetition,epoch)   \n",
-    "    ave_jac = asymptotic_jacobian(model_clone,x_train,100,no_of_repetition)\n",
+    "    ave_jac,distibution= asymptotic_jacobian(model_clone,x_train,100,no_of_repetition)\n",
     "   \n",
     "    average_jacobian.append(ave_jac)\n",
     "    \n",
+    "    x = [ele.real for ele in s]\n",
+    "    # extract imaginary part\n",
+    "    y = [ele.imag for ele in s]\n",
     "    #for i in range(no_of_images):\n",
     "    \n",
     "        #spectral+=spectral_radius(model_clone,x_train[i],no_of_repetition,no_of_images)\n",
@@ -509,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "9a2c25ac",
+   "id": "ba5b19f7",
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5f61c45",
+   "id": "4a558ad6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -701,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e3ae86b4",
+   "id": "cee757a7",
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +798,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b9d04a5",
+   "id": "777e221c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32235c1c",
+   "id": "8ba3380d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -813,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "41e38dfa",
+   "id": "f0d3eae4",
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "320e2ee6",
+   "id": "7f1968b3",
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "a6622a0a",
+   "id": "3edf8c37",
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +990,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b92a52c0",
+   "id": "792daffe",
    "metadata": {},
    "outputs": [],
    "source": []
